--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,17 @@
-#root = true
+root = true
 
 [*]
-indent_style = space
+indent_style = tab
+tab_width = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_size = 2
-
+max_line_length = 150
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
+
+[package.json]
+indent_style = space
+indent_size = 2
