--- a/.editorconfig
+++ b/.editorconfig
@@ -2,12 +2,17 @@ root = true
 
 [*]
 indent_style = tab
-tab_width = 4
+tab_width = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 150
+
+[*.ts]
+indent_style = tab
+tab_width = 4
+
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
